--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3,17 +3,17 @@
 /*----------colors---------*/
 
 .bg-color-details {
-    background:#B4B7BC;
-    color:#6D4399;
+    background: #B4B7BC;
+    color: #6D4399;
 }
 
 .formbg {
-    background:#B4B7BC;
+    background: #B4B7BC;
 }
 
 
 .bg-color-contact {
-    color:#6D4399;
+    color: #6D4399;
 }
 
 /*----------Header---------*/
@@ -26,16 +26,16 @@ header {
     background-size: contain;
     height: 150px;
     position: relative;
-    margin-bottom:50px;
-    
+    margin-bottom: 50px;
+
 }
 
 button {
     margin-top: 120px;
-    margin-bottom:10px;
+    margin-bottom: 10px;
     position: relative;
     padding: 0;
-    background-color:#B4B7BC; 
+    background-color: #B4B7BC;
     font-size: 15px;
     height: 30px;
 }
@@ -44,7 +44,7 @@ button {
     margin: 10px 3px;
     word-spacing: 2em;
     padding: 0;
-    
+
 }
 
 
@@ -67,7 +67,7 @@ nav ul a {
 
 nav ul .icon {
     margin-right: 10px;
-    color:#FACC2E;
+    color: #FACC2E;
 }
 
 
@@ -78,46 +78,47 @@ nav ul a:hover {
 
 
 /*----------Footer---------*/
-footer{
+
+footer {
     background: #6D4399;
     color: #6D4399;
     position: relative;
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
     text-align: justify;
-    height:80px;
+    height: 80px;
 }
 
 .footermessage {
-    background-color:#FACC2E;
-    margin:0;
-    height:80px;
-    padding:10px;
+    background-color: #FACC2E;
+    margin: 0;
+    height: 80px;
+    padding: 10px;
 }
 
 .links {
-    text-align:center;
-    background-color:#6D4399;
-    color:#B4B7BC;
-    font-size:10px;
+    text-align: center;
+    background-color: #6D4399;
+    color: #B4B7BC;
+    font-size: 10px;
 }
 
 .social-links {
-    background-color:#6D4399; 
-    padding:0;
+    background-color: #6D4399;
+    padding: 0;
 }
 
 .social-links i {
-    background-color:#6D4399; 
-    color:#B4B7BC;
+    background-color: #6D4399;
+    color: #B4B7BC;
 }
 
 .infobutton {
     font-size: 30px;
     color: #6D4399;
-    margin:0;
-    margin-top:10px;
-    margin-left:5px;
+    margin: 0;
+    margin-top: 10px;
+    margin-left: 5px;
     padding: 0;
     transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
@@ -126,60 +127,65 @@ footer{
 }
 
 .infobutton:hover {
-    color:#FACC2E;
+    color: #FACC2E;
 }
 
 
 .icon {
     font-size: 30px;
-    color:#000;
-    margin-right:25px;
-    margin-top:10px;
+    color: #000;
+    margin-right: 25px;
+    margin-top: 10px;
     text-align: center;
-    padding:0;
-     transition: all 0.5s ease-in-out;
+    padding: 0;
+    transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
     -webkit-transition: all 0.5s ease-in-out;
     -o-transition: all 0.5s ease-in-out;
 }
 
 .icon:hover {
-    color:#FACC2E;
+    color: #FACC2E;
 }
 
 .copyright {
     font-size: 30px;
     color: #6D4399;
-    margin-left:90%;
-    margin-bottom:10px;
-    padding:0;
+    margin-left: 90%;
+    margin-bottom: 10px;
+    padding: 0;
 }
 
 .container-fluid {
     padding: 0;
-    margin:0;
-   /* background: #6D4399;
+    margin: 0;
+    /* background: #6D4399;
     margin-top: 5px;*/
 }
 
 /*-----------special paddings/margins/text----------*/
-h1,h3,h4 {
-    margin:0;
+
+h1,
+h3,
+h4 {
+    margin: 0;
 }
 
 h2 {
-    margin:0;
+    margin: 0;
     text-align: center;
+    font-weight: 600;
+    text-decoration: underline;
+    color: #6D4399;
 }
 
 .uppercase {
     text-transform: uppercase;
-    font-size:15px;
-   
+    font-size: 15px;
 }
 
 .inline-block {
-    display:inline-block;
+    display: inline-block;
 }
 
 .general {
@@ -188,18 +194,19 @@ h2 {
     margin-top: 15px;
 }
 
-p{
-    font-size:15px;
+p {
+    font-size: 15px;
 }
 
 /*----------Testimonials---------*/
 
 .testimonials {
-    padding:5px;
-    margin:35px;
+    padding: 5px;
+    margin: 35px;
 }
 
 /*----------body---------*/
+
 .row {
     display: -ms-flexbox;
     display: flex;
@@ -211,16 +218,16 @@ p{
     padding: 0;
 }
 
-  body {
-        background: #B4B7BC;
-    }
+body {
+    background: #B4B7BC;
+}
 
 /*----------section---------*/
 
 .parastyle {
     margin-top: 5px;
     margin-bottom: 5px;
- }
+}
 
 .gallery {
     margin: 15px 30px;
@@ -228,8 +235,33 @@ p{
 
 section {
     padding: 0;
-    margin:0;
+    margin: 0;
 }
+
+.table {
+    border: solid;
+    width: 80%;
+    color: black;
+    border-color: #6D4399;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+table th {
+    background: #6D4399;
+    color: white;
+    border: solid;
+    border-color: #6D4399;
+    text-align: center;
+}
+
+table td {
+    border: solid;
+
+    color: black;
+    border-color: #6D4399;
+}
+
 
 /*----------Media Queries---------*/
 
@@ -237,7 +269,7 @@ section {
 /* Mobile */
 
     {
-  
+
     nav ul a {
         margin-right: 60%;
         display: inline-block;
@@ -248,7 +280,7 @@ section {
 /* Tablet */
 
     {
-   
+
     nav ul a {
         margin-right: 25%;
         display: inline-block;
@@ -258,189 +290,4 @@ section {
 @media screen and (min-width: 980px)
 /* Desktop */
 
-    {
-    
-}
-
-
-/* --------------Timeline---------------- */
- .timeline {
-    list-style: none;
-    padding: 10px 0;
-    position: relative;
-    font-weight: 300;
-}
-.timeline:before {
-    top: 0;
-    bottom: 0;
-    position: absolute;
-    content:" ";
-    width: 2px;
-    background: #ffffff;
-    left: 50%;
-    margin-left: -1.5px;
-}
-.timeline > li {
-    margin-bottom: 20px;
-    position: relative;
-    width: 50%;
-    float: left;
-    clear: left;
-}
-.timeline > li:before, .timeline > li:after {
-    content:" ";
-    display: table;
-}
-.timeline > li:after {
-    clear: both;
-}
-.timeline > li:before, .timeline > li:after {
-    content:" ";
-    display: table;
-}
-.timeline > li:after {
-    clear: both;
-}
-.timeline > li > .timeline-panel {
-    width: calc(100% - 25px);
-    width: -moz-calc(100% - 25px);
-    width: -webkit-calc(100% - 25px);
-    float: left;
-    border: 1px solid #dcdcdc;
-    background: #ffffff;
-    position: relative;
-}
-.timeline > li > .timeline-panel:before {
-    position: absolute;
-    top: 26px;
-    right: -15px;
-    display: inline-block;
-    border-top: 15px solid transparent;
-    border-left: 15px solid #dcdcdc;
-    border-right: 0 solid #dcdcdc;
-    border-bottom: 15px solid transparent;
-    content:" ";
-}
-.timeline > li > .timeline-panel:after {
-    position: absolute;
-    top: 27px;
-    right: -14px;
-    display: inline-block;
-    border-top: 14px solid transparent;
-    border-left: 14px solid #ffffff;
-    border-right: 0 solid #ffffff;
-    border-bottom: 14px solid transparent;
-    content:" ";
-}
-.timeline > li > .timeline-badge {
-    color: #ffffff;
-    width: 24px;
-    height: 24px;
-    line-height: 50px;
-    text-align: center;
-    position: absolute;
-    top: 16px;
-    right: -12px;
-    z-index: 100;
-}
-.timeline > li.timeline-inverted > .timeline-panel {
-    float: right;
-}
-.timeline > li.timeline-inverted > .timeline-panel:before {
-    border-left-width: 0;
-    border-right-width: 15px;
-    left: -15px;
-    right: auto;
-}
-.timeline > li.timeline-inverted > .timeline-panel:after {
-    border-left-width: 0;
-    border-right-width: 14px;
-    left: -14px;
-    right: auto;
-}
-.timeline-badge > a {
-    color: #ffffff !important;
-}
-.timeline-badge a:hover {
-    color: #dcdcdc !important;
-}
-.timeline-title {
-    margin-top: 0;
-    color: inherit;
-}
-.timeline-heading h5 {
-    font-weight: 400;
-    padding: 0 15px;
-    color: #4679bd;
-}
-.timeline-body > p, .timeline-body > ul {
-    padding: 10px 15px;
-    margin-bottom: 0;
-}
-.timeline-footer {
-    padding: 5px 15px;
-    background-color:#f4f4f4;
-}
-.timeline-footer p { margin-bottom: 0; }
-.timeline-footer > a {
-    cursor: pointer;
-    text-decoration: none;
-}
-.timeline > li.timeline-inverted {
-    float: right;
-    clear: right;
-}
-.timeline > li:nth-child(2) {
-    margin-top: 60px;
-}
-.timeline > li.timeline-inverted > .timeline-badge {
-    left: -12px;
-}
-.no-float {
-    float: none !important;
-}
-@media (max-width: 767px) {
-    ul.timeline:before {
-        left: 40px;
-    }
-    ul.timeline > li {
-        margin-bottom: 0px;
-        position: relative;
-        width:100%;
-        float: left;
-        clear: left;
-    }
-    ul.timeline > li > .timeline-panel {
-        width: calc(100% - 65px);
-        width: -moz-calc(100% - 65px);
-        width: -webkit-calc(100% - 65px);
-    }
-    ul.timeline > li > .timeline-badge {
-        left: 28px;
-        margin-left: 0;
-        top: 16px;
-    }
-    ul.timeline > li > .timeline-panel {
-        float: right;
-    }
-    ul.timeline > li > .timeline-panel:before {
-        border-left-width: 0;
-        border-right-width: 15px;
-        left: -15px;
-        right: auto;
-    }
-    ul.timeline > li > .timeline-panel:after {
-        border-left-width: 0;
-        border-right-width: 14px;
-        left: -14px;
-        right: auto;
-    }
-    .timeline > li.timeline-inverted {
-        float: left;
-        clear: left;
-        margin-top: 30px;
-        margin-bottom: 30px;
-    }
-    .timeline > li.timeline-inverted > .timeline-badge {
-        left: 28px;
-    }
+{}
