--- a/assets/CSS/style1.css
+++ b/assets/CSS/style1.css
@@ -55,7 +55,7 @@ li a {
 }
 
 li a:hover:not(.active) {
-    background-color: #000;
+    background-color: #B4B7BC;
 }
 
 li a:hover {
@@ -197,6 +197,7 @@ table td {
     font-family: "Exo", sans-serif;
     text-align: center;
     margin-top: 10px;
+    font-size: 40px;
 
 }
 
@@ -205,6 +206,15 @@ table td {
     font-family: "Exo", sans-serif;
     text-align: center;
     margin-bottom: 15px;
+}
+
+.testhead {
+    font-weight: 600;
+    font-family: "Exo", sans-serif;
+    text-align: center;
+    margin-top: 20px;
+    font-size: 30px;
+    text-decoration: underline;
 }
 
 .container-fluid {
@@ -217,52 +227,76 @@ table td {
 }
 
 .gallery {
-    margin: 15px 30px;
+    margin: 1px;
+    width: 100%;
+    text-align: center;
 }
 
 .news {
     z-index: -1;
-    font-weight:600;
-    text-align:center;
+    font-weight: 600;
+    text-align: center;
+    margin: 10px 0 20px 0;
 }
 
 .newsheader {
-    margin: 20px 0;
-    text-align:center;
-    text-decoration:underline;
-    font-weight:bold;
-    color:#6D4399;
+    margin-top: 10px;
+    text-align: center;
+    text-decoration: underline;
+    font-weight: bold;
+    color: #696969;
 }
 
 .bordernews {
-  border-style: solid;
-  border-width:1px;
-  font-weight:600;
+    border-style: solid;
+    border-width: 1px;
+    font-weight: 600;
 }
 
 .center {
-  width: 50%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  
-} 
+    width: 50%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 50%;
+}
+
+.fontsize {
+    font-size: 15px;
+}
+
 /*----------Testimonials---------*/
 
-.testimonials {
+/*.testimonials {
     padding: 0;
     margin-left: 10px;
     margin-right: 2px;
-    margin-bottom:10px;
+    margin-bottom: 10px;
     text-align: justify;
     z-index: -1;
-    font-weight:600;
-    font-family:"Exo",sans-serif;
+    font-weight: 600;
+    font-family: "Exo", sans-serif;
+}*/
+
+.testimonials {
+    padding: 0;
+    margin: 5px;
+    width: 100%;
+    text-align: justify;
+    z-index: -1;
+    font-weight: 600;
+    font-family: "Exo", sans-serif;
+}
+
+.image {
+    width: 250px;
+    height: 200px;
+    margin: 5px 12.5%;
 }
 
 /*----------Media Queries---------*/
 
-@media screen and (max-width: 500px)
+@media screen and (max-width: 767px)
 /* Mobile */
 
     {
@@ -271,9 +305,14 @@ table td {
         margin-right: 60%;
         display: inline-block;
     }
+    .fontsize {
+        font-size: 10px;
+        margin-bottom: 10px;
+    }
+
 }
 
-@media screen and (min-width: 501px) and (max-width: 979px)
+@media screen and (min-width: 768px) and (max-width: 991px)
 /* Tablet */
 
     {
@@ -282,9 +321,98 @@ table td {
         margin-right: 25%;
         display: inline-block;
     }
+
+    .gallery {
+        margin: 1px;
+        width: 49%;
+        text-align: center;
+    }
+
+    .testimonials {
+        padding: 0;
+        margin: 1px;
+        width: 100%;
+        text-align: justify;
+        z-index: -1;
+        font-weight: 600;
+        font-family: "Exo", sans-serif;
+    }
+
+    .image {
+        width: 60%;
+        height: 400px;
+        margin: 10px 20%;
+    }
+
+    .center {
+        width: 40%;
+        display: block;
+        margin: 10px 30%;
+        height: 50%;
+    }
+    .fontsize {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .newsheader {
+        margin-top: 10px;
+        text-align: center;
+        text-decoration: underline;
+        font-weight: bold;
+        color: #191970;
+        font-size:30px;
+    }
+
 }
 
-@media screen and (min-width: 980px)
+@media screen and (min-width: 992px)
 /* Desktop */
 
-{}
+    {
+    .gallery {
+        margin: 1px;
+        width: 24%;
+        text-align: center;
+    }
+
+    .testimonials {
+        padding: 0;
+        margin: 1px;
+        width: 100%;
+        text-align: justify;
+        z-index: -1;
+        font-weight: 600;
+        font-family: "Exo", sans-serif;
+    }
+
+    .image {
+        width: 40%;
+        height: 500px;
+        margin: 10px 30%;
+    }
+
+    .center {
+        width: 500;
+        display: block;
+        margin: 10px 25%;
+        height: 400;
+        text-align: center;
+
+    }
+
+    .fontsize {
+        font-size: 25px;
+        margin-bottom: 10px;
+    }
+
+.newsheader {
+        margin-top: 10px;
+        text-align: center;
+        text-decoration: underline;
+        font-weight: bold;
+        color: #6D4399;
+        font-size:40px;
+    }
+
+}
