--- a/assets/CSS/style1.css
+++ b/assets/CSS/style1.css
@@ -147,16 +147,6 @@ footer {
 
 /*----------Tables---------*/
 
-.table {
-    border: solid;
-    width: 80%;
-    color: black;
-    border-color: #6D4399;
-    margin-left: 10%;
-    margin-right: 10%;
-    background-color: #B4B7BC;
-}
-
 table th {
     background: #6D4399;
     color: white;
@@ -253,30 +243,9 @@ table td {
     font-weight: 600;
 }
 
-.center {
-    width: 50%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 50%;
-}
-
-.fontsize {
-    font-size: 15px;
-}
-
 /*----------Testimonials---------*/
 
-/*.testimonials {
-    padding: 0;
-    margin-left: 10px;
-    margin-right: 2px;
-    margin-bottom: 10px;
-    text-align: justify;
-    z-index: -1;
-    font-weight: 600;
-    font-family: "Exo", sans-serif;
-}*/
+
 
 .testimonials {
     padding: 0;
@@ -310,6 +279,34 @@ table td {
         margin-bottom: 10px;
     }
 
+    .center {
+        width: 50%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        height: 50%;
+    }
+
+    .table {
+        border: solid;
+        width: 90%;
+        height: 100%;
+        color: black;
+        border-color: #6D4399;
+        margin-left: 10%;
+        margin-right: 10%;
+        background-color: #B4B7BC;
+        overflow: auto;
+        font-size: 10px;
+    }
+    
+    .responsive {
+    overflow: auto;
+    height: 100%;
+    width: 340px;
+    margin: 0;
+
+}
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px)
@@ -361,9 +358,29 @@ table td {
         text-decoration: underline;
         font-weight: bold;
         color: #191970;
-        font-size:30px;
+        font-size: 30px;
     }
 
+    .table {
+        border: solid;
+        width: 100%;
+        height: 100%;
+        color: black;
+        border-color: #6D4399;
+        margin-left: 10%;
+        margin-right: 10%;
+        background-color: #B4B7BC;
+        overflow: auto;
+    }
+
+    .responsive {
+        overflow: auto;
+        height: 100%;
+        width: 660px;
+        margin-left: 10px;
+        margin-right: 10px;
+
+    }
 }
 
 @media screen and (min-width: 992px)
@@ -393,10 +410,10 @@ table td {
     }
 
     .center {
-        width: 500;
+        width: 600px;
         display: block;
-        margin: 10px 25%;
-        height: 400;
+        margin: 10px 600px;
+        height: 300px;
         text-align: center;
 
     }
@@ -406,13 +423,32 @@ table td {
         margin-bottom: 10px;
     }
 
-.newsheader {
+    .newsheader {
         margin-top: 10px;
         text-align: center;
         text-decoration: underline;
         font-weight: bold;
         color: #6D4399;
-        font-size:40px;
+        font-size: 40px;
+    }
+
+    .table {
+        border: solid;
+        width: 100%;
+        height: 100%;
+        color: black;
+        border-color: #6D4399;;
+        background-color: #B4B7BC;
+        overflow: auto;
+    }
+
+    .responsive {
+        overflow: auto;
+        height: 100%;
+        width: 90%;
+        margin-left: 5%;
+        margin-right: 5%;
+
     }
 
 }
