--- a/assets/CSS/style1.css
+++ b/assets/CSS/style1.css
@@ -97,6 +97,11 @@ body {
 .row {
     margin-left: 5px;
     margin-right: 5px;
+
+}
+
+.layout {
+    z-index: -1;
 }
 
 .paragraph {
@@ -104,7 +109,7 @@ body {
     text-align: justify;
     text-justify: inter-word;
     font-family: "Exo", Times, serif;
-    font-size: 20px;
+    font-size: 10px;
     font-weight: 500;
     z-index: -1;
 }
@@ -226,7 +231,7 @@ table td {
     z-index: -1;
     font-weight: 600;
     text-align: center;
-    margin: 10px 0 20px 0;
+    margin: 10px 0 20px 0px;
 }
 
 .newsheader {
@@ -244,8 +249,6 @@ table td {
 }
 
 /*----------Testimonials---------*/
-
-
 
 .testimonials {
     padding: 0;
@@ -276,7 +279,9 @@ table td {
     }
     .fontsize {
         font-size: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 25px;
+        text-align: justify;
+        margin-right: 10px;
     }
 
     .center {
@@ -299,14 +304,23 @@ table td {
         overflow: auto;
         font-size: 10px;
     }
-    
-    .responsive {
-    overflow: auto;
-    height: 100%;
-    width: 340px;
-    margin: 0;
 
-}
+    .responsive {
+        overflow: auto;
+        height: 100%;
+        width: 340px;
+        margin: 0;
+
+    }
+
+    .picdimensions {
+        width: 200px;
+        height: 150px;
+    }
+
+    .parastyle {
+        font-size: 15px;
+    }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px)
@@ -342,14 +356,17 @@ table td {
     }
 
     .center {
-        width: 40%;
+        width: 60%;
         display: block;
-        margin: 10px 30%;
+        margin: 5px 20% 5px 20%;
         height: 50%;
+        text-align: center;
     }
     .fontsize {
         font-size: 20px;
         margin-bottom: 20px;
+        margin-right: 10px;
+        text-align: justify;
     }
 
     .newsheader {
@@ -381,6 +398,21 @@ table td {
         margin-right: 10px;
 
     }
+
+    .picdimensions {
+        width: 300px;
+        height: 200px;
+    }
+
+    .paragraph {
+    margin: 10px 0;
+    text-align: justify;
+    text-justify: inter-word;
+    font-family: "Exo", Times, serif;
+    font-size: 20px;
+    font-weight: 500;
+    z-index: -1;
+}
 }
 
 @media screen and (min-width: 992px)
@@ -412,7 +444,7 @@ table td {
     .center {
         width: 600px;
         display: block;
-        margin: 10px 600px;
+        margin: 10px 30px 10px 60px;
         height: 300px;
         text-align: center;
 
@@ -421,11 +453,13 @@ table td {
     .fontsize {
         font-size: 25px;
         margin-bottom: 10px;
+        text-align: justify;
+        margin-right: 10px;
     }
 
     .newsheader {
         margin-top: 10px;
-        text-align: center;
+        text-align: left;
         text-decoration: underline;
         font-weight: bold;
         color: #6D4399;
@@ -437,7 +471,7 @@ table td {
         width: 100%;
         height: 100%;
         color: black;
-        border-color: #6D4399;;
+        border-color: #6D4399;
         background-color: #B4B7BC;
         overflow: auto;
     }
@@ -451,4 +485,18 @@ table td {
 
     }
 
+    .picdimensions {
+        width: 600px;
+        height: 400px;
+    }
+
+    .paragraph {
+        margin: 10px 0;
+        text-align: justify;
+        text-justify: inter-word;
+        font-family: "Exo", Times, serif;
+        font-size: 23px;
+        font-weight: 500;
+        z-index: -1;
+    }
 }
