--- a/assets/CSS/style1.css
+++ b/assets/CSS/style1.css
@@ -17,10 +17,21 @@
     background: none;
 }
 
+.bars {
+    background-color: #6D4399;
+    color: #B4B7BC;
+    margin-left: 10px;
+    margin-top: 10px;
+    padding: 0;
+    top: 0;
+    display: block;
+    cursor: pointer;
+}
+
 /*----------Header---------*/
 
 header {
-    margin-bottom: 90px;
+    margin-bottom: 0;
 }
 
 .navbar {
@@ -34,16 +45,22 @@ header {
     float: right;
 }
 
+.icons {
+    display: none;
+}
+
 ul {
     list-style-type: none;
-    margin: 0;
+    margin-bottom: 0;
     margin-top: 0;
     padding: 0;
     background-color: #6D4399;
+
 }
 
 li {
     float: left;
+    list-style: none;
 }
 
 li a {
@@ -261,9 +278,9 @@ table td {
 }
 
 .image {
-    width: 250px;
+    width: 200px;
     height: 200px;
-    margin: 5px 12.5%;
+    margin: 5px 20%;
 }
 
 /*----------Media Queries---------*/
@@ -273,10 +290,15 @@ table td {
 
     {
 
+    ul {
+        font-size: 8px;
+    }
+
     nav ul a {
         margin-right: 60%;
         display: inline-block;
     }
+
     .fontsize {
         font-size: 10px;
         margin-bottom: 25px;
@@ -321,12 +343,53 @@ table td {
     .parastyle {
         font-size: 15px;
     }
+
+    .navbar {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #6D4399;
+        position: absolute;
+        top: 25px;
+        width: 35%;
+        height: 300px;
+        padding: 0;
+        float: right;
+        transform: translateX(-100%);
+        transition: transform 1s ease-in-out;
+    }
+
+    .navbar-active {
+        transform: translateX(0);
+    }
+
+    #formstyle {
+        width: 80%;
+        display: inline-block;
+        text-align: center;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    
+    .textsize {
+        font-size:15px;
+    }
+
+
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px)
 /* Tablet */
 
     {
+
+    ul {
+        font-size: 10px;
+    }
+
+    .bars {
+        display: none;
+    }
 
     nav ul a {
         margin-right: 25%;
@@ -350,9 +413,10 @@ table td {
     }
 
     .image {
-        width: 60%;
-        height: 400px;
-        margin: 10px 20%;
+        width: 400px;
+        height: 250px;
+        margin: 10px 25%;
+        align-items: center;
     }
 
     .center {
@@ -362,6 +426,7 @@ table td {
         height: 50%;
         text-align: center;
     }
+
     .fontsize {
         font-size: 20px;
         margin-bottom: 20px;
@@ -405,20 +470,39 @@ table td {
     }
 
     .paragraph {
-    margin: 10px 0;
-    text-align: justify;
-    text-justify: inter-word;
-    font-family: "Exo", Times, serif;
-    font-size: 20px;
-    font-weight: 500;
-    z-index: -1;
-}
+        margin: 10px 0;
+        text-align: justify;
+        text-justify: inter-word;
+        font-family: "Exo", Times, serif;
+        font-size: 20px;
+        font-weight: 500;
+        z-index: -1;
+    }
+
+    .navbar {
+        overflow: hidden;
+        background-color: #6D4399;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 90px;
+        padding: 0;
+        float: right;
+    }
+    header {
+        margin-bottom: 90px;
+    }
 }
 
 @media screen and (min-width: 992px)
 /* Desktop */
 
     {
+    .bars {
+        display: none;
+    }
+
+
     .gallery {
         margin: 1px;
         width: 24%;
@@ -436,9 +520,10 @@ table td {
     }
 
     .image {
-        width: 40%;
+        width: 500px;
         height: 500px;
-        margin: 10px 30%;
+        margin: 10px 38%;
+
     }
 
     .center {
@@ -486,8 +571,8 @@ table td {
     }
 
     .picdimensions {
-        width: 600px;
-        height: 400px;
+        width: 450px;
+        height: 300px;
     }
 
     .paragraph {
@@ -498,5 +583,20 @@ table td {
         font-size: 23px;
         font-weight: 500;
         z-index: -1;
+    }
+
+    .navbar {
+        overflow: hidden;
+        background-color: #6D4399;
+        position: fixed;
+        top: 0;
+        width: 100%;
+        height: 90px;
+        padding: 0;
+        float: right;
+    }
+
+    header {
+        margin-bottom: 90px;
     }
 }
