--- a/assets/CSS/style1.css
+++ b/assets/CSS/style1.css
@@ -26,6 +26,8 @@
     top: 0;
     display: block;
     cursor: pointer;
+    z-index: 1;
+    position: fixed
 }
 
 /*----------Header---------*/
@@ -34,7 +36,7 @@ header {
     margin-bottom: 0;
 }
 
-.navbar {
+/*.navbar {
     overflow: hidden;
     background-color: #6D4399;
     position: fixed;
@@ -43,7 +45,7 @@ header {
     height: 90px;
     padding: 0;
     float: right;
-}
+}*/
 
 .icons {
     display: none;
@@ -103,17 +105,17 @@ body {
     background-size: contain;
     top: 0;
     width: 100%;
-    position: relative;
+    position: fixed;
     height: 150px;
     padding: 0;
-    z-index: -1;
     margin: 0;
+    z-index: 0;
 }
 
 
 .row {
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 25px;
+    margin-right: 25px;
 
 }
 
@@ -141,6 +143,9 @@ footer {
     margin: 0;
     text-align: center;
     height: 50px;
+    position: fixed;
+    width: 100%;
+    bottom: 23px;
 }
 
 .footermessage {
@@ -229,9 +234,13 @@ table td {
     text-decoration: underline;
 }
 
-.container-fluid {
+
+.container-fluid1 {
     padding: 0;
-    margin: 0;
+    margin-top: 150px;
+    margin-bottom: 80px;
+    height: 100%;
+    width: 100%;
 }
 
 .contact-heading {
@@ -239,7 +248,6 @@ table td {
 }
 
 .gallery {
-    margin: 1px;
     width: 100%;
     text-align: center;
 }
@@ -280,7 +288,7 @@ table td {
 .image {
     width: 200px;
     height: 200px;
-    margin: 5px 20%;
+    margin: 5px 80px;
 }
 
 /*----------Media Queries---------*/
@@ -304,6 +312,10 @@ table td {
         margin-bottom: 25px;
         text-align: justify;
         margin-right: 10px;
+    }
+
+    .footermessage {
+        font-size: 15px;
     }
 
     .center {
@@ -349,7 +361,7 @@ table td {
         flex-direction: column;
         align-items: center;
         background-color: #6D4399;
-        position: absolute;
+        position: fixed;
         top: 25px;
         width: 35%;
         height: 300px;
@@ -370,9 +382,9 @@ table td {
         margin-left: 10%;
         margin-right: 10%;
     }
-    
+
     .textsize {
-        font-size:15px;
+        font-size: 15px;
     }
 
 
@@ -397,7 +409,7 @@ table td {
     }
 
     .gallery {
-        margin: 1px;
+
         width: 49%;
         text-align: center;
     }
@@ -405,7 +417,7 @@ table td {
     .testimonials {
         padding: 0;
         margin: 1px;
-        width: 100%;
+        /*width: 100%;*/
         text-align: justify;
         z-index: -1;
         font-weight: 600;
@@ -413,9 +425,9 @@ table td {
     }
 
     .image {
-        width: 400px;
+        width: 300px;
         height: 250px;
-        margin: 10px 25%;
+        margin: 10px;
         align-items: center;
     }
 
@@ -483,14 +495,27 @@ table td {
         overflow: hidden;
         background-color: #6D4399;
         position: fixed;
-        top: 0;
+        top: 150px;
         width: 100%;
         height: 90px;
         padding: 0;
         float: right;
     }
+
+    .container-fluid1 {
+        padding: 0;
+        margin-top: 250px;
+        margin-bottom: 80px;
+        height: 100%;
+        width: 100%;
+    }
+
     header {
         margin-bottom: 90px;
+    }
+
+    .testhead {
+        text-align: left;
     }
 }
 
@@ -505,8 +530,9 @@ table td {
 
     .gallery {
         margin: 1px;
-        width: 24%;
         text-align: center;
+        width: 32%;
+
     }
 
     .testimonials {
@@ -522,7 +548,7 @@ table td {
     .image {
         width: 500px;
         height: 500px;
-        margin: 10px 38%;
+        margin: 10px;
 
     }
 
@@ -572,7 +598,8 @@ table td {
 
     .picdimensions {
         width: 450px;
-        height: 300px;
+        height: 350px;
+        
     }
 
     .paragraph {
@@ -589,14 +616,27 @@ table td {
         overflow: hidden;
         background-color: #6D4399;
         position: fixed;
-        top: 0;
+        top: 150px;
         width: 100%;
         height: 90px;
         padding: 0;
         float: right;
     }
 
+    .container-fluid1 {
+        padding: 0;
+        margin-top: 250px;
+        margin-bottom: 80px;
+        height: 100%;
+        width: 100%;
+    }
+
     header {
         margin-bottom: 90px;
     }
+
+    .testhead {
+        text-align: left;
+    }
+
 }
