--- a/assets/CSS/style1.css
+++ b/assets/CSS/style1.css
@@ -17,6 +17,24 @@
     background: none;
 }
 
+.submit {
+    background-color: #7dff52;
+    border: none;
+    margin-top:5px;
+    font-weight: bold;
+    padding:10px;
+    margin:5px 10px 0 10px;
+}
+
+.reset {
+    border: none;
+    background-color: #ff5050;
+    margin-top:5px;
+    font-weight: bold;
+    padding:10px;
+    margin:5px 10px 0 10px;
+}
+
 .bars {
     background-color: #6D4399;
     color: #B4B7BC;
@@ -26,7 +44,7 @@
     top: 0;
     display: block;
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
     position: fixed
 }
 
@@ -109,7 +127,7 @@ body {
     height: 150px;
     padding: 0;
     margin: 0;
-    z-index: 0;
+    z-index: 1;
 }
 
 
@@ -369,6 +387,7 @@ table td {
         float: right;
         transform: translateX(-100%);
         transition: transform 1s ease-in-out;
+        z-index: 2;
     }
 
     .navbar-active {
@@ -500,6 +519,7 @@ table td {
         height: 90px;
         padding: 0;
         float: right;
+        z-index: 2;
     }
 
     .container-fluid1 {
@@ -599,7 +619,7 @@ table td {
     .picdimensions {
         width: 450px;
         height: 350px;
-        
+
     }
 
     .paragraph {
@@ -621,6 +641,7 @@ table td {
         height: 90px;
         padding: 0;
         float: right;
+        z-index: 2;
     }
 
     .container-fluid1 {
