--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,7 +351,7 @@ table td {
         width: 340px;
         margin: 0;
     }
-    
+
     .newsheader {
         margin-top: 15px;
     }
@@ -359,7 +359,7 @@ table td {
     h6 {
         font-size: 30px;
     }
-    
+
     .picdimensions {
         width: 0px;
         height: 0px;
@@ -398,7 +398,7 @@ table td {
 
     .textsize {
         font-size: 20px;
-        color:#6D4399;
+        color: #6D4399;
     }
 
     .video {
@@ -418,7 +418,7 @@ table td {
 @media screen and (min-width: 768px) and (max-width: 1024px) {
     /* Tablet */
     ul {
-        font-size: 12px;
+        font-size: 13px;
     }
 
     .bars {
@@ -490,6 +490,7 @@ table td {
     }
 
     .responsive {
+        /*only for devices (min-width:768px) and (max-width:1000px)*/
         overflow: auto;
         height: 100%;
         width: 660px;
@@ -498,8 +499,9 @@ table td {
     }
 
     .picdimensions {
-        width: 300px;
-        height: 200px;
+        width: 160px;
+        height: 100px;
+        margin-top: 120px;
     }
 
     .paragraph {
@@ -541,6 +543,31 @@ table td {
         float: left;
         width: 100%;
         color: #6D4399;
+    }
+
+    .textsize {
+        font-size: 20px;
+    }
+}
+
+@media screen and (min-width: 1000px) and (max-width: 1024px) {
+    /* Large Tablet */
+    .responsive {
+        overflow: auto;
+        height: 100%;
+        width: 900px;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    ul {
+        font-size: 17px;
+    }
+
+    .picdimensions {
+        width: 210px;
+        height: 150px;
+        margin-top: 75px;
     }
 }
 
